# gitnexus-wiki

./: .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml
src/wiki/: __init__.py  __main__.py
src/wiki/core/: cli.py  factpack.py  generate.py  gitnexus.py  manifest.py  prose.py  prose_ext.py  render.py  verify.py
src/wiki/packs/: __init__.py  base.py
src/wiki/packs/python/: __init__.py  discriminator.py
src/wiki/templates/: README.md.j2  architecture.md.j2  cluster.md.j2  processes.md.j2
