[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gitnexus-wiki"
version = "0.1.0"
description = "Grounded wiki generator for gitnexus-indexed repositories. Every emitted symbol and path is verified against the knowledge graph."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Juan Larios" }]
keywords = ["gitnexus", "documentation", "wiki", "knowledge-graph"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "jinja2>=3.1",
    "pyyaml>=6.0",
]

[project.scripts]
gitnexus-wiki = "wiki.__main__:main"

[project.urls]
Homepage = "https://github.com/juanmlarios/gitnexus-wiki"
Issues = "https://github.com/juanmlarios/gitnexus-wiki/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/wiki"]

[tool.hatch.build.targets.wheel.force-include]
"src/wiki/templates" = "wiki/templates"
